fix: passed state has changed to children to communicate if todolist is modified

--- a/TodoClient/Components/Pages/Home.razor
+++ b/TodoClient/Components/Pages/Home.razor
@@ -22,7 +22,7 @@
                 <label class="toggle-all-label">Toggle All Input</label>
             </div>
         }
-        <TodoList Todos="todos" FilterTodos="FilterTodos" />
+        <TodoList Todos="todos" FilterTodos="FilterTodos" UpdateState="UpdateState" />
     </main>
     @if (todos.Count != 0)
     {
@@ -98,4 +98,5 @@
         }
         await TodoService.ToggleAllTodoItems(filteredTodos);
     }
+    private void UpdateState() => StateHasChanged();
 }
